[package]
name = "libtransport"
version = "0.0.1"
authors = ["Samuel Marks <@SamuelMarks>"]
edition = "2018"

[dependencies]
libcommon-rs = { git = "https://github.com/Fantom-foundation/libcommon-rs" }
serde = "1.0.97"
bincode = "1.0.1"
os_pipe = "0.8.0"
futures-preview = { version = "=0.3.0-alpha.17", features = ["async-await", "nightly"] }
