[package]
name = "libtransport"
version = "0.0.4"
authors = ["Samuel Marks <@SamuelMarks>"]
edition = "2018"

[dependencies]
libcommon-rs = { git = "https://github.com/Fantom-foundation/libcommon-rs" }
serde = "1.0.101"
bincode = "1.2.0"
os_pipe = "0.8.2"
futures-preview = { version = "0.3.0-alpha.19", features = ["async-await"] }
failure = "0.1.5"
